--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="/preview.webp" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    <meta name="description" content="Heavy music festivals in Europe" />
+    <meta
+      name="keywords"
+      content="music, festival, heavy, stoner, doom, psychedelic"
+    />
     <title>Fuzzy Fest</title>
   </head>
   <body>
